architecture-ide/tests/fixtures/negative/S1_sync_references_unknown_concept.sync
sync BadSync

  when
    Counter/inc: [ amount: ?amount ] => [ total: ?total ]
  then
    Mailer/send: [ body: ?total ]
